@@ -1,0 +1,1 @@
+σ skill=='C'(skills) ᑎ σ id%2==0 (skills)
