@@ -1,0 +1,4 @@
+id,skill
+0,C
+2,C
+4,C
