@@ -1,0 +1,1 @@
+σ skill=='C' (skills) - σ id%2==0(skills)
