@@ -1,0 +1,1 @@
+σ age<21 (people) ᑌ σage >30(people)
