@@ -1,0 +1,3 @@
+id,name,chief,age
+3,dean,1,33
+1,carl,0,20
