@@ -11,6 +11,7 @@
 - Fixed futile_union_intersection_subtraction optimization that didn't work when selection operator was in the left subtree (Rev 261)
 - Module parallel does something, can execute queries in parallel
 - Set hash method for the classes
+- Implemented select_union_intersect_subtract general optimization
 
 0.11
 - Font is set only on windows (Rev 206)
